Cambios y mejora de persistencia a clean code 2.1.1